--- a/exercícios/ex026/mq002/estilos/style.css
+++ b/exercícios/ex026/mq002/estilos/style.css
@@ -1,3 +1,23 @@
 @charset "UTF-8";
 
 /* Configurações gerais */
+
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body {
+    height: 100vh;
+    width: 100vw;
+    background-color: rgb(35, 62, 255);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    color: white;
+    text-shadow: 3px 3px 0px rgb(24, 43, 184);
+    padding: 15px;
+}
