--- a/exercícios/ex026/mq004/estilos/style.css
+++ b/exercícios/ex026/mq004/estilos/style.css
@@ -2,6 +2,9 @@
 
 /* Versão Mobile First */
 
+
+
+
 * {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.3em;
@@ -42,6 +45,11 @@ img {
     display: block;
     margin: auto;
 }
+
+h1#phone { display: block; }
+h1#tablet { display: none; }
+h1#pc { display: none; }
+h1#tv { display: none; }
 
 img#phone { display: block; }
 img#tablet { display: none; }
