--- a/exercícios/ex026/mq005/estilos/style.css
+++ b/exercícios/ex026/mq005/estilos/style.css
@@ -1,5 +1,64 @@
 @charset "UTF-8";
 
+* {
+    font-family: Arial, Helvetica, sans-serif;
+
+    padding: 0px;
+    margin: 0px;
+}
+
 body, html {
     background-color: lightgray;
+}
+
+header {
+    background-color: rgb(167, 167, 167);
+}
+
+header h1 {
+    text-align: center;
+    padding: 10px;
+}
+
+menu {
+    display: block;
+}
+
+menu ul {
+    list-style-type: none;
+}
+
+menu a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    background-color: rgb(82, 82, 82);
+    color: white;
+    text-align: center;
+    border-top: 2px solid rgb(167, 167, 167);
+}
+
+menu a:hover {
+    background-color: gray;
+}
+
+main {
+    width: 90vw;
+    background-color: white;
+    margin: auto;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 15px;
+}
+
+article h2 {
+    padding: 15px;
+    text-align: center;
+}
+
+article p {
+    text-indent: 20px;
+    text-align: justify;
+    line-height: 25px;
+    margin-bottom: 10px;
 }
