--- a/exercícios/ex026/mq005/estilos/style.css
+++ b/exercícios/ex026/mq005/estilos/style.css
@@ -20,8 +20,22 @@ header h1 {
     padding: 10px;
 }
 
-menu {
+i#burguer {
+    background-color: rgb(41, 41, 41);
     display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+    color: white;
+}
+
+i#burguer:hover {
+    background-color: white;
+    color: black;
+}
+
+menu {
+    display: none;
 }
 
 menu ul {
