--- a/exercícios/ex027/flex014 - conteudo-flex/style.css
+++ b/exercícios/ex027/flex014 - conteudo-flex/style.css
@@ -1,1 +1,30 @@
 @charset "UTF-8";
+
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: normal;
+    line-height: 1.5;
+}
+
+p, h1, h2 {
+    margin-bottom: 10px;
+    text-align: justify;
+}
+p {
+    text-indent: 20px;
+}
+
+header, section.normal {
+    padding: 20px;
+}
+
+section.flex-content {
+    background-color: rgb(179, 179, 179);
+    padding: 30px;
+}
