--- a/exercícios/ex027/flex014 - conteudo-flex/style.css
+++ b/exercícios/ex027/flex014 - conteudo-flex/style.css
@@ -27,4 +27,40 @@ header, section.normal {
 section.flex-content {
     background-color: rgb(179, 179, 179);
     padding: 30px;
+
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+article.text-media {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+article.media-text {
+    display: flex;
+    flex-flow: row wrap-reverse;
+    justify-content: space-between;
+    margin: 10px;
+}
+
+article > div.text {
+    flex: 1 1 500px;
+}
+
+article > div.media {
+    flex: 1 0 500px;
+}
+
+div.media > img {
+    display: block;
+    margin: auto;
+    padding: 10px;
+}
+
+div.media > iframe {
+    display: block;
+    margin: auto;
+    width: 90%;
 }
