--- a/exercícios/ex028/grid005/style.css
+++ b/exercícios/ex028/grid005/style.css
@@ -23,8 +23,10 @@ div.caixa {
 div#cx1 {
     background-color: lightgreen;
 
-    grid-column: 1 / -1;
-    grid-row: 1 / 2;
+    grid-area: 1 / 1 / span 1 / span 4;
+
+    /*grid-column: 1 / -1;
+    grid-row: 1 / 2;*/
 
     /*grid-column-start: 1;
     grid-column-end: 5;
@@ -35,8 +37,10 @@ div#cx1 {
 div#cx2 {
     background-color: lightcoral;
 
-    grid-column: 1 / 3;
-    grid-row: 2 / -1;
+    grid-area: 2 / 1 / span 2 / span 2;
+
+    /*grid-column: 1 / 3;
+    grid-row: 2 / -1;*/
 
     /*grid-column-start: 1;
     grid-column-end: 3;
@@ -47,8 +51,10 @@ div#cx2 {
 div#cx3 {
     background-color: lightblue;
 
-    grid-column: 3 / -1;
-    grid-row: 2 / -1;
+    grid-area: 2 / 3 / span 2 / span 2;
+
+    /*grid-column: 3 / -1;
+    grid-row: 2 / -1;*/
 
     /*grid-column-start: 3;
     grid-column-end: 5;
